# py-web-vue

./: .gitignore  LICENSE  README.md
python/: MANIFEST.in  setup.cfg  setup.py
python/src/: MANIFEST.in  setup.cfg
python/src/pywebvue/: __init__.py  core.py  helpers.py  protocol.py  utils.py
python/src/pywebvue/backends/: __init__.py
python/src/pywebvue/backends/core/: __init__.py
python/src/pywebvue/backends/paraview/: __init__.py  protocols.py
python/src/pywebvue/backends/vtk/: __init__.py  protocols.py  render_window_serializer.py  utils.py
python/src/pywebvue/modules/AGGrid/: LICENSE.md  __init__.py
python/src/pywebvue/modules/AGGrid/serve/: .gitignore  demo.html  (+7 more)
python/src/pywebvue/modules/CDNVegaLite/: LICENSE.md  __init__.py
python/src/pywebvue/modules/Deck/: LICENSE.md  __init__.py
python/src/pywebvue/modules/Markdown/: LICENSE.md  __init__.py
python/src/pywebvue/modules/Matplotlib/: .gitignore  README.md  __init__.py
python/src/pywebvue/modules/ParaView/: LICENSE.md  __init__.py  core.py
python/src/pywebvue/modules/Plotly/: __init__.py
python/src/pywebvue/modules/Router/: __init__.py
python/src/pywebvue/modules/SizeObserver/: .gitignore  __init__.py
python/src/pywebvue/modules/VTK/: LICENSE.md  __init__.py  addon_serializer.py  core.py
python/src/pywebvue/modules/VegaEmbed/: LICENSE.md  __init__.py
python/src/pywebvue/modules/VegaLite/: LICENSE.md  __init__.py
python/src/pywebvue/modules/Widgets/: .gitignore  __init__.py
python/src/pywebvue/modules/XAI/: __init__.py
python/src/pywebvue/utils/: __init__.py  version.py
(+260 files in other folders)
