[metadata]
name = pywebvue
version = dev
description = Python server creating interactive vue app over WebSocket
long_description = Build a 3D Web application using VTK or ParaView while only writing a Python script. This project aims to streamline the existing ParaViewWeb infrastructure into something that is simpler to use by lowering the entry point complexity.
author = Kitware, Inc.
author_email = kitware@kitware.com
url = https://github.com/kitware/py-web-vue
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Vue.js
    websocket
    VTK
    ParaView
    Web3D

[options]
packages = find:
install_requires = wslink>=1.2.0
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude = tests.* tests
